# money-insights

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_demo/categories/: categories_conditions.csv
data_demo/transactions/generic/: fake_transactions.csv
project/: Home.py  app.py  app_data.py  barplot.py  categories.py  constants.py  dates_utils.py  enums.py  metrics.py  parsers.py  settings.py  transactions_aggregation.py  transactions_filters.py  transactions_read.py  transactions_state.py  transactions_tree.py  utils.py
project/pages/: 0_Transactions.py  1_Last_Month.py  1_Last_Month_Summary.py  1_Transactions.py
tests/: test_dates_utils.py  test_files.py  test_parsers.py
