[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "money_insights"
description = ""
readme = "README.md"
classifiers = [
    "Framework :: Streamlit",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamlit",
    'importlib-metadata; python_version>="3.8"',
]
dynamic = ["version"]
