[project]
readme = "README.md"
classifiers = [
    "Framework :: Streamlit",
    "Programming Language :: Python :: 3",
]

[tool.poetry]
name = "money-insights"
version = "0.1.0"
description = "Streamlit app for analysis of personal finance"
authors = ["Pawel Ciurka <pawelciurka@gmail.com>"]
packages = [{ include = "project" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7"
requests = "^2.25.1"
streamlit = "^1.38.0"
pandas = "^1.4.3"
numpy = "^1.26.4" # after releasing numpy 2.0.0 it's incompatible with pandas
pytest = "^7.1.2"
plotly= "^5.10.0"
pyyaml= "^6.0"
